--- a/app/src/main/res/layout/fragment_create.xml
+++ b/app/src/main/res/layout/fragment_create.xml
@@ -11,10 +11,22 @@
         android:id="@+id/btn_create_notification"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Create Notification"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="Create Alarm"
+        app:layout_constraintBottom_toTopOf="@+id/btn_cancel_alarm"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btn_cancel_alarm"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Cancel Alarm"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_create_notification" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
